--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,6 +28,9 @@ jobs:
       - name: Build and run tests
         run: ./script/build.bat
         shell: cmd
+      - uses: actions/upload-artifact@v3
+        with:
+          path: "D:\a\ww\ww\script\..\dll\x64\webview.dll"
 
   swig:
     runs-on: ubuntu-latest
